# shuang-kan-ss-manga

./: .env.example  .gitignore  .npmrc  Cargo.toml  README.md  SECURITY.md  package.json  requirements.txt
.cargo/: config.toml
.githooks/: pre-push
.github/workflows/: public-repository-check.yml
apps/web/: .npmrc  package-lock.json  package.json  tsconfig.json
apps/web/app/: globals.css  layout.tsx
apps/web/src/components/: dashboard.tsx  tag-autocomplete.tsx
apps/web/src/lib/: api.ts  dashboard-model.ts  reader-model.ts  tag-system.ts  tag-translations.json  tag-translations.meta.json
config/: source-adapters.json  source-tag-overrides.json
config/tag-vocabularies/: 18comic.json  alignment-report.json
docs/: architecture.md  client-strategy.md  decisions.md  dev-api-shim.md  file-library.md  persistence.md  public-release.md  roadmap.md  source-adapters.md  stack.md  tag-translations.md  task-lifecycle.md  task-output.md  task-queue.md  代码结构与可复用性审查.md  项目功能变更记录.docx  项目架构与数据库设计.docx  项目架构与数据库设计.md
infra/: docker-compose.yml
scripts/: 18comic_bridge.py  audit_tag_alignment.py  check.ps1  check_async_pool.mjs  check_download_core.py  check_fangliding_pagination.py  check_public_repo.py  check_search_pipeline.mjs  check_source_adapters.py  check_tag_system.mjs  check_thumbnail_policy.mjs  dev-env.ps1  dev.ps1  e2e_18comic_excluded_tags.mjs  ehentai_bridge.py  fangliding_bridge.py  generate_design_doc.py  jmcomic_api_adapter.py  library_export.py  library_pdf_export.py  postgres.ps1  sample_18comic_tags.py  source_bridge_core.py  source_tag_resolver.py  sync_source_tag_mappings.py  update_feature_log.py  update_tag_translations.py
services/api/: Cargo.toml
services/api/migrations/: 0001_create_tasks.sql  0002_add_task_output.sql
services/api/src/: error.rs  local_worker.rs  main.rs  publisher.rs  repository.rs  routes.rs  state.rs
services/dev-api/: async-pool.mjs  search-filter.mjs  search-pipeline.mjs  server.mjs  source-registry.mjs  thumbnail-policy.mjs
workers/download/: Cargo.toml
workers/download/src/: main.rs
