[package]
name = "comic-platform-api"
edition.workspace = true
license.workspace = true
version.workspace = true

[features]
default = []
postgres = ["dep:sqlx"]

[dependencies]
comic-platform-domain = { path = "../../packages/domain" }
comic-platform-source-adapter = { path = "../../packages/source-adapter" }
comic-platform-task-queue = { path = "../../packages/task-queue" }
comic-platform-task-runtime = { path = "../../packages/task-runtime" }
anyhow.workspace = true
axum.workspace = true
chrono.workspace = true
futures-util.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx = { workspace = true, optional = true }
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
