[package]
name = "comic-platform-download-worker"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
comic-platform-domain = { path = "../../packages/domain" }
comic-platform-source-adapter = { path = "../../packages/source-adapter" }
comic-platform-task-queue = { path = "../../packages/task-queue" }
comic-platform-task-runtime = { path = "../../packages/task-runtime" }
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
